[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/Kenney Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 72.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 72.0

[node name="LabelScore" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 408.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="LabelTimeLeft" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 412.0
margin_right = 460.0
margin_bottom = 72.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="LabelMessage" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -36.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Coin Dash"
align = 1
valign = 1

[node name="ButtonStart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -62.0
margin_right = 66.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 3 )
text = "Start"

[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
